# sqlalchemy-singlestoredb

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PLANNING.md  README.md  RELEASE.md  TASKS.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  test.py
.claude/: settings.local.json
.github/workflows/: coverage.yml  pre-commit.yml  publish.yml  smoke-test.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
conda.recipe/: meta.yaml
dev-docs/: README.md  mypy-type-checking-guide.md  pytest-testing-guide.md  singlestore-python-sdk-reference.md  singlestore-usage-examples.md  sqlalchemy-dialect-development.md
docs/: .buildinfo  CNAME  api.html  genindex.html  getting-started.html  index.html  install.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  whatsnew.html
docs/_sources/: api.rst.txt  getting-started.rst.txt  index.rst.txt  install.rst.txt  whatsnew.rst.txt
docs/_static/: documentation_options.js
docs/src/: api.rst  conf.py  getting-started.rst  install.rst  post-process-html  whatsnew.rst
examples/: Untitled.ipynb
resources/: __init__.py  build_docs.py  bump_version.py  create_release.py  create_test_cluster.py  drop_test_cluster.py
sqlalchemy_singlestore/: __init__.py  base.py  cymysql.py  http.py  reflection.py
sqlalchemy_singlestoredb/: __init__.py  base.py  column.py  compat.py  ddlelement.py  dtypes.py  reflection.py  table.py
sqlalchemy_singlestoredb/examples/: shard_key_examples.py  table_constructor_examples.py
sqlalchemy_singlestoredb/examples/universal/: main.py
sqlalchemy_singlestoredb/tests/: README_pytest_fixtures.md  conftest.py  run_all_tests.py  test_advanced_indexes.py  test_basics.py  test_column_group.py  test_database_fixtures.py  test_declarative_reflection.py  test_error_handling.py  test_error_handling_pytest.py  test_integration_features.py  test_json_type.py  test_key_reflection.py  test_persisted_column.py  test_priority1_features.py  test_shard_key.py  test_sort_key.py  test_sql_compilation.py  test_table_options.py  test_table_types.py  test_vector_key.py  test_vector_type.py
