[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'sqlalchemy_singlestoredb'
version = '1.1.3'
description = 'SQLAlchemy dialect for the SingleStoreDB database'
readme = 'README.md'
requires-python = '>=3.9'
license = {text = 'Apache-2.0'}
authors = [
    {name = 'SingleStore', email = 'support@singlestore.com'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
]
dependencies = [
    'singlestoredb>=1.0.0',
    'sqlalchemy>=1.4.0,<3.0.0dev',
]

[project.optional-dependencies]
dev = [
    'coverage',
    'pytest',
    'pytest-cov',
]

[project.urls]
Homepage = 'https://github.com/singlestore-labs/sqlalchemy-singlestoredb'

[project.entry-points.'sqlalchemy.dialects']
singlestoredb = 'sqlalchemy_singlestoredb:dialect'
'singlestoredb.mysql' = 'sqlalchemy_singlestoredb:dialect'
'singlestoredb.http' = 'sqlalchemy_singlestoredb:dialect'
'singlestoredb.https' = 'sqlalchemy_singlestoredb:dialect'

[tool.setuptools.packages.find]
where = ['.']
include = ['sqlalchemy_singlestoredb*']

[tool.setuptools.package-data]
'*' = ['*.sql', '*.csv']

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = 'testing.*'
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = 'tests.*'
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ['sqlalchemy_singlestoredb/tests']

[tool.coverage.run]
source = ['sqlalchemy_singlestoredb']
