[metadata]
name = sqlalchemy_singlestore
version = 0.1.0
description = SQLAlchemy dialect for the SingleStore database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/sqlalchemy-singlestore
author = SingleStore
author_email = support@singlestore.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    singlestore
    sqlalchemy>=1.4.0,<2.0.0dev
python_requires = >=3.7
tests_require =
    coverage
    nose2

[options.packages.find]
exclude =
    resources*
    examples*

[options.entry_points]
sqlalchemy.dialects =
    singlestore = sqlalchemy_singlestore:dialect
    singlestore.cymysql = sqlalchemy_singlestore:dialect
    singlestore.mysqlconnector = sqlalchemy_singlestore:dialect
    singlestore.mariadb = sqlalchemy_singlestore:dialect
    singlestore.mysqldb = sqlalchemy_singlestore:dialect
    singlestore.pymysql = sqlalchemy_singlestore:dialect
    singlestore.pyodbc = sqlalchemy_singlestore:dialect
    singlestore.http = sqlalchemy_singlestore:dialect
    singlestore.https = sqlalchemy_singlestore:dialect

[flake8]
exclude = resources
max-complexity = 20
max-line-length = 90
per-file-ignores =
    singlestore/__init__.py:F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
