[metadata]
name = sqlalchemy_singlestoredb
version = 0.1.1
description = SQLAlchemy dialect for the SingleStore database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/sqlalchemy-singlestore
author = SingleStore
author_email = support@singlestore.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    singlestoredb
    sqlalchemy>=1.4.0,<2.0.0dev
python_requires = >=3.7
tests_require =
    coverage
    nose2

[options.packages.find]
exclude =
    docs*
    resources*
    examples*
    licenses*

[options.entry_points]
sqlalchemy.dialects =
    singlestoredb = sqlalchemy_singlestoredb:dialect
    singlestoredb.cymysql = sqlalchemy_singlestoredb:dialect
    singlestoredb.mysqlconnector = sqlalchemy_singlestoredb:dialect
    singlestoredb.mariadb = sqlalchemy_singlestoredb:dialect
    singlestoredb.mysqldb = sqlalchemy_singlestoredb:dialect
    singlestoredb.pymysql = sqlalchemy_singlestoredb:dialect
    singlestoredb.pyodbc = sqlalchemy_singlestoredb:dialect
    singlestoredb.http = sqlalchemy_singlestoredb:dialect
    singlestoredb.https = sqlalchemy_singlestoredb:dialect

[options.package_data]
* =
    *.sql
    *.csv

[flake8]
exclude = resources
max-complexity = 20
max-line-length = 90
per-file-ignores =
    sqlalchemy_singlestoredb/__init__.py:F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
