[metadata]
name = sqlalchemy_singlestoredb
version = 1.1.3
description = SQLAlchemy dialect for the SingleStoreDB database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/singlestore-labs/sqlalchemy-singlestoredb
author = SingleStore
author_email = support@singlestore.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    singlestoredb>=1.0.0
    sqlalchemy>=1.4.0,<3.0.0dev
python_requires = >=3.9
tests_require =
    coverage
    pytest
    pytest-cov

[options.packages.find]
exclude =
    docs*
    resources*
    examples*
    licenses*

[options.entry_points]
sqlalchemy.dialects =
    singlestoredb = sqlalchemy_singlestoredb:dialect
    singlestoredb.mysql = sqlalchemy_singlestoredb:dialect
    singlestoredb.http = sqlalchemy_singlestoredb:dialect
    singlestoredb.https = sqlalchemy_singlestoredb:dialect

[options.package_data]
* =
    *.sql
    *.csv

[flake8]
exclude =
    docs/*
    resources/*
max-complexity = 20
max-line-length = 90
per-file-ignores =
    sqlalchemy_singlestoredb/__init__.py:F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
